--- a/index2.html
+++ b/index2.html
@@ -32,6 +32,8 @@
       <label>Message</label>
       <textarea name="" id="" cols="30" rows="10"></textarea>
     </div>
+    <button>Submit</button>
   </div>
+  
 </body>
 </html>
